[package]
name = "game-of-life"
version = "0.4.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
rand = "0.8.5"
once_cell = "1.13.1"
bincode = "1.3.3"
serde = { version = "1.0.144", features = ["derive"] }
async-channel = "2.2.1"

[dependencies.adw]
package = "libadwaita"
version  = "0.7.0"
features = ["v1_5"]

[dependencies.gtk]
package = "gtk4"
version = "0.9.0"

[dependencies.glib]
version = "0.20.1"
features = ["log_macros"]

