[package]
name = "game-of-life"
version = "0.5.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
rand = "0.8.5"
once_cell = "1.13.1"
bincode = "1.3.3"
serde = { version = "1.0.144", features = ["derive"] }

[dependencies.adw]
package = "libadwaita"
version  = "0.3.1"
features = ["v1_3"]

[dependencies.gtk]
package = "gtk4"
version = "0.6.4"

[dependencies.glib]
version = "0.17.5"
features = ["log_macros"]

