[package]
name = "game-of-life"
version = "0.6.1"
edition = "2021"

[dependencies]
async-channel = "2.5.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
rand = "0.8.5"
once_cell = "1.13.1"
bincode = "1.3.3"
serde = { version = "1.0.144", features = ["derive"] }

[dependencies.adw]
package = "libadwaita"
version  = "0.8.0"
features = ["v1_8"]

[dependencies.gtk]
package = "gtk4"
version = "0.10.2"

[dependencies.glib]
version = "0.21.4"
features = ["log", "log_macros"]

